--- a/Projects/index.html
+++ b/Projects/index.html
@@ -26,8 +26,13 @@
             </div>
             <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
-            <p class="card__title">Project Name</p>
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+            <div class="card__images">
+                <img src="wmodel_fr.png">
+                <img src="wmodel_fr.png">
+                <img src="wmodel_fr.png">
+            </div>
+            <p class="card__title">Face Recognition</p>
+            <p class="card__description">HOG is a simple and powerful feature descriptor. It is not only used for face detection but also it is widely used for object detection like cars, pets, and fruits. HOG is robust for object detection because object shape is characterized using the local intensity gradient distribution and edge direction.</p>
             <button class="card__button">Live Demo</button>
             <button class="card__button secondary">Source Code</button>
             </div>
