projects page added

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -27,14 +27,53 @@
             <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
             <div class="card__images">
-                <img src="wmodel_fr.png">
-                <img src="wmodel_fr.png">
-                <img src="wmodel_fr.png">
+                <img src="wmodel_fr.png" class="card_img1">
             </div>
             <p class="card__title">Face Recognition</p>
-            <p class="card__description">HOG is a simple and powerful feature descriptor. It is not only used for face detection but also it is widely used for object detection like cars, pets, and fruits. HOG is robust for object detection because object shape is characterized using the local intensity gradient distribution and edge direction.</p>
-            <button class="card__button">Live Demo</button>
-            <button class="card__button secondary">Source Code</button>
+            <div class="card__description">
+            <p class="head2" style="color: rgba(0,0,0,0.9);">Haarcascade file used are:</p>
+            <ul style="color: rgba(0,0,0,0.6);">
+                <li>haarcascade_frontalFace_alt2.xml</li>
+                <li>haarcascade_eye.xml</li>
+                <li>haarcascade_smile.xml</li>
+            </ul>
+            <p class="head2" style="color: rgba(0,0,0,0.9);">Python: 3.6</p>
+            <p class="head1" style="color: rgba(0,0,0,0.9);">Description: </p>
+            <p class = "head2" style="color: rgba(0,0,0,0.8);">Haar Cascade Detection is one of the oldest yet powerful face detection algorithms invented. It has been there since long, long before Deep Learning became famous. Haar Features were used to detect license number plates too. The models are stored on GitHub, and we can access them with OpenCV methods.</p>
+            <p style="color: rgba(0,0,0,0.9);">GitHub:</p>
+            </div>
+            <button class="card__button"> <a href="https://github.com/Naman0022/Face-recognition">Source Code</a></button>
+            </div>
+        </div>
+        <div class="card">
+            <div>
+                <div class="profile">
+                    <img src="gd_1.png" class="card__image">
+                </div>
+                <h class="profile_heading">Plane Simulator <br>(Game Dev)</h>
+            </div>
+            <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
+            <div class="card__content">
+            <div class="card__images">
+                <img src="gd_2.png" class="card_img1" style="height: 10vw;width: 10vw;">
+            </div>
+            <p class="card__title">Plane Simulator (Game Dev)</p>
+            <div class="card__description">
+            <p class="head2" style="color: rgba(0,0,0,0.9);">The C# files were made for: </p>
+            <ul style="color: rgba(0,0,0,0.6); padding-top: -4vw;">
+                <li>A controller script that controls planes in air their movement and relaxation.</li>
+                <li>Transitions</li>
+            </ul>
+            <p class="head2" style="color: rgba(0,0,0,0.9);">Unity3d | C#</p>
+            <p class="head1" style="color: rgba(0,0,0,0.9);">Description: </p>
+            <ul class = "head2" style="color: rgba(0,0,0,0.8);">
+                <li>Can turn or move in a 3d space</li>
+                <li>3d locomotion made from scratch with some research on documentaries or blogs</li>
+                <li>Also modified into movement of arrow project name "Yondu's Arrow" on GitHub with some working example videos</li>
+            </ul>
+            <p style="color: rgba(0,0,0,0.9);">GitHub:</p>
+            </div>
+            <button class="card__button"> <a href="https://github.com/Naman0022/Planes-Remastered-" >Source Code</a></button>
             </div>
         </div>
         <div class="card">
@@ -42,101 +81,41 @@
                 <div class="profile">
                     <img src="1_fr.png" class="card__image">
                 </div>
-                <h class="profile_heading">Face Recognition</h>
+                <h class="profile_heading" style="margin-left: -3vw;">Edith-2.1<br>A simple voice assistant</h>
             </div>
+            <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
-            <p class="card__title">Project Name</p>
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <button class="card__button">Live Demo</button>
-            <button class="card__button secondary">Source Code</button>
+            <div class="card__images">
+                <img src="wmodel_fr.png" class="card_img1">
+            </div>
+            <p class="card__title">Edith-2.1<br><i style="color: rgba(0,0,0,0.6);">(A simple voice assistant)</i></p>
+            <div class="card__description">
+            <p class="head2" style="color: rgba(0,0,0,0.9);">A simple voice assistant utilising speechRecognition and pyttsx3 for audio.</p>
+            <p class="head2" style="color: rgba(0,0,0,0.9);margin-right: 10vw;">Supports hindi, english and punjabi</p>
+            <!-- <ul style="color: rgba(0,0,0,0.6);">
+                <li>haarcascade_frontalFace_alt2.xml</li>
+                <li>haarcascade_eye.xml</li>
+                <li>haarcascade_smile.xml</li>
+            </ul> -->
+            <p class="head2" style="color: rgba(0,0,0,0.9);">Python: 3.8</p>
+            <p class="head1" style="color: rgba(0,0,0,0.9);">Description: </p>
+            <p class = "head2" style="color: rgba(0,0,0,0.8);">Some of the features are:</p>
+            <ul class = "head2" style="color: rgba(0,0,0,0.8);">
+                <li>Screenshot</li>
+                <li>Youtube Video Extractor</li>
+                <li>Sending mails</li>
+                <li>Self Improvement(Developer Mode)</li>
+                <li>Weather</li>
+            </ul>
+            <p style="color: rgba(0,0,0,0.9);margin-top: -1vw;">GitHub:</p>
+            </div>
+            <button class="card__button"> <a href="https://github.com/Naman0022/Edith-v2.1" >Source Code</a></button>
             </div>
         </div>
-        <div class="card">
-            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 5H4V19L13.2923 9.70649C13.6828 9.31595 14.3159 9.31591 14.7065 9.70641L20 15.0104V5ZM2 3.9934C2 3.44476 2.45531 3 2.9918 3H21.0082C21.556 3 22 3.44495 22 3.9934V20.0066C22 20.5552 21.5447 21 21.0082 21H2.9918C2.44405 21 2 20.5551 2 20.0066V3.9934ZM8 11C6.89543 11 6 10.1046 6 9C6 7.89543 6.89543 7 8 7C9.10457 7 10 7.89543 10 9C10 10.1046 9.10457 11 8 11Z"></path></svg>
-            <div class="card__content">
-            <p class="card__title">Project Name</p>
-            <p class="card__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-            <button class="card__button">Live Demo</button>
-            <button class="card__button secondary">Source Code</button>
-            </div>
-        </div>
     </div>
-<!--       
-    <div class="gridcon1">
-        <div class="content">
-            <h class="head1" style="color: aqua;">Face Recognition</h>
-            <p class="head2" style="color: rgba(255,255,255,0.8);">Haarcascade file used are:</p>
-            <ul style="color: rgba(255,255,255,0.5);">
-                <li>haarcascade_frontalFace_alt2.xml</li>
-                <li>haarcascade_eye.xml</li>
-                <li>haarcascade_smile.xml</li>
-            </ul>
-            <p class="head2" style="color: rgba(255,255,255,0.8);">Python: 3.6</p>
-            <p class="head1" style="color: rgba(255,255,255,0.8);">Description</p>
-            <p class = "head2" style="color: rgba(255,255,255,0.7);">Haar Cascade Detection is one of the oldest yet powerful face detection algorithms invented. It has been there since long, long before Deep Learning became famous. Haar Features were not only used to detect faces, but also for eyes, lips, license number plates etc. The models are stored on GitHub, and we can access them with OpenCV methods.</p>
-            <p style="color: rgba(255,255,255,0.8);">GitHub: <a href="https://github.com/Naman0022/Face-recognition" style="text-decoration: none;color: aliceblue;">link</a></p>
-        </div>
-        <div class="gallery">
-            <img src="data_fr.png" alt="a house on a mountain">
-            <p></p>
-            <img src="text1_fr.png" alt="big rocks with some trees">
-            <img src="text3_fr.png" alt="a waterfall, a lot of tree and a great view from the sky">
-            <img src="wmodel_fr.png" alt="a cool landscape">
-            <img src="attendene_fr.png" alt="inside a town between two big buildings">
-            <img src="text2_fr.png" alt="a great view of the sea above the mountain">
-        </div>
+    <div class="check">
+        Check out more of my projects on <a href="https://github.com/Naman0022?tab=repositories" style="text-decoration: none;">GitHub...</a>
     </div>
-    <div class="gridcon2">
-        
-        <div class="gallery">
-            <img src="data_fr.png" alt="a house on a mountain">
-            <p></p>
-            <img src="text1_fr.png" alt="big rocks with some trees">
-            <img src="text3_fr.png" alt="a waterfall, a lot of tree and a great view from the sky">
-            <img src="wmodel_fr.png" alt="a cool landscape">
-            <img src="attendene_fr.png" alt="inside a town between two big buildings">
-            <img src="text2_fr.png" alt="a great view of the sea above the mountain">
-        </div>
-        <div class="content">
-            <h class="head1" style="color: rgba(100,100,200,1);">Face Recognition</h>
-            <p class="head2" style="color: rgba(0,0,0,0.8);">Haarcascade file used are:</p>
-            <ul style="color: rgba(0,0,0,0.7);">
-                <li>haarcascade_frontalFace_alt2.xml</li>
-                <li>haarcascade_eye.xml</li>
-                <li>haarcascade_smile.xml</li>
-            </ul>
-            <p class="head2">Python: 3.6</p>
-            <p class="head1">Description</p>
-            <p class = "head2" style="color: rgba(0,0,0,0.7);">Haar Cascade Detection is one of the oldest yet powerful face detection algorithms invented. It has been there since long, long before Deep Learning became famous. Haar Features were not only used to detect faces, but also for eyes, lips, license number plates etc. The models are stored on GitHub, and we can access them with OpenCV methods.</p>
-            <p>GitHub: <a href="https://github.com/Naman0022/Face-recognition" style="text-decoration: none;color: black;">link</a></p>
-        </div>
-    </div>
-
-    <div class="gridcon1">
-        <div class="content">
-            <h class="head1" style="color: aqua;">Face Recognition</h>
-            <p class="head2" style="color: rgba(255,255,255,0.8);">Haarcascade file used are:</p>
-            <ul style="color: rgba(255,255,255,0.5);">
-                <li>haarcascade_frontalFace_alt2.xml</li>
-                <li>haarcascade_eye.xml</li>
-                <li>haarcascade_smile.xml</li>
-            </ul>
-            <p class="head2" style="color: rgba(255,255,255,0.8);">Python: 3.6</p>
-            <p class="head1" style="color: rgba(255,255,255,0.8);">Description</p>
-            <p class = "head2" style="color: rgba(255,255,255,0.7);">Haar Cascade Detection is one of the oldest yet powerful face detection algorithms invented. It has been there since long, long before Deep Learning became famous. Haar Features were not only used to detect faces, but also for eyes, lips, license number plates etc. The models are stored on GitHub, and we can access them with OpenCV methods.</p>
-            <p style="color: rgba(255,255,255,0.8);">GitHub: <a href="https://github.com/Naman0022/Face-recognition" style="text-decoration: none;color: aliceblue;">link</a></p>
-        </div>
-        <div class="gallery">
-            <img src="data_fr.png" alt="a house on a mountain">
-            <p></p>
-            <img src="text1_fr.png" alt="big rocks with some trees">
-            <img src="text3_fr.png" alt="a waterfall, a lot of tree and a great view from the sky">
-            <img src="wmodel_fr.png" alt="a cool landscape">
-            <img src="attendene_fr.png" alt="inside a town between two big buildings">
-            <img src="text2_fr.png" alt="a great view of the sea above the mountain">
-        </div>
-    </div> -->
-
     <footer class="footer">
         <div id="me_">
             <p class="footer_text">Always ready for an oppertunity.</p>
@@ -151,12 +130,5 @@
         </div>
     </footer>
     
-    <script>
-        let cursor = document.getElementById('cursor');
-        window.onmousemove = function(e) {
-            cursor.style.left = e.clientX + 'px';
-            cursor.style.top = e.clientY + 'px';
-        }
-    </script>
 </body>
 </html>
