--- a/Projects/index.html
+++ b/Projects/index.html
@@ -86,7 +86,7 @@
             <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
             <div class="card__images">
-                <img src="wmodel_fr.png" class="card_img1">
+                <img src="record.png" class="card_img1">
             </div>
             <p class="card__title">Edith-2.1<br><i style="color: rgba(0,0,0,0.6);">(A simple voice assistant)</i></p>
             <div class="card__description">
