--- a/Projects/index.html
+++ b/Projects/index.html
@@ -20,14 +20,14 @@
         <div class="card">
             <div>
                 <div class="profile">
-                    <img src="1_fr.png" class="card__image">
+                    <img src="./1_fr.png" class="card__image">
                 </div>
                 <h class="profile_heading">Face Recognition</h>
             </div>
             <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
             <div class="card__images">
-                <img src="wmodel_fr.png" class="card_img1">
+                <img src="./wmodel_fr.png" class="card_img1">
             </div>
             <p class="card__title">Face Recognition</p>
             <div class="card__description">
@@ -48,14 +48,14 @@
         <div class="card">
             <div>
                 <div class="profile">
-                    <img src="gd_1.png" class="card__image">
+                    <img src="./gd_1.png" class="card__image">
                 </div>
                 <h class="profile_heading">Plane Simulator <br>(Game Dev)</h>
             </div>
             <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
             <div class="card__images">
-                <img src="gd_2.png" class="card_img1" style="height: 10vw;width: 10vw;">
+                <img src="./gd_2.png" class="card_img1" style="height: 10vw;width: 10vw;">
             </div>
             <p class="card__title">Plane Simulator (Game Dev)</p>
             <div class="card__description">
@@ -79,14 +79,14 @@
         <div class="card">
             <div>
                 <div class="profile">
-                    <img src="1_fr.png" class="card__image">
+                    <img src="./1_fr.png" class="card__image">
                 </div>
                 <h class="profile_heading" style="margin-left: -3vw;">Edith-2.1<br>A simple voice assistant</h>
             </div>
             <!-- <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"></svg> -->
             <div class="card__content">
             <div class="card__images">
-                <img src="record.png" class="card_img1">
+                <img src="./record.png" class="card_img1">
             </div>
             <p class="card__title">Edith-2.1<br><i style="color: rgba(0,0,0,0.6);">(A simple voice assistant)</i></p>
             <div class="card__description">
