--- a/Projects/index.html
+++ b/Projects/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a class="active" href="index.html">Projects</a></li>
-        <li><a  href="index.html">Skills</a></li>
+        <li><a  href="../Skills/index.html">Skills</a></li>
         <li><a href="../Resume_07_23.pdf" download>Resume</a></li>
         <li><a href="#about">About</a></li>
     </ul>
@@ -124,8 +124,8 @@
             <p class="footer_text">Like my Portfolio, say hi to me:</p>
             <!-- <p><a href="npunj_be21@thapar.edu">Mail me</a></p> -->
             <div id="linkimg">
-                <a href="mailto: npunj_be21@thapar.edu"><img src="../email.png" height="40px" width="40px"></a>
-                <a href="https://www.linkedin.com/in/naman-punj-78b453227/"><img src="../linkedin.png" height="40px" width="40px"></a>
+                <a href="mailto: npunj_be21@thapar.edu"><img src="../email.png" ></a>
+                <a href="https://www.linkedin.com/in/naman-punj-78b453227/"><img src="../linkedin.png" ></a>
             </div>
         </div>
     </footer>
