--- a/Skills/index.html
+++ b/Skills/index.html
@@ -73,3 +73,41 @@
             <img src="text2_fr.png" alt="a great view of the sea above the mountain">
         </div>
     </div> -->
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style_p.css">
+</head>
+<body>
+    <div class="header">
+    <ul>
+        <li><a href="../index.html">Home</a></li>
+        <li><a class="active" href="index.html">Projects</a></li>
+        <li><a  href="index.html">Skills</a></li>
+        <li><a href="../Resume_07_23.pdf" download>Resume</a></li>
+        <li><a href="#about">About</a></li>
+    </ul>
+    </div>
+
+
+    
+    <footer class="footer">
+        <div id="me_">
+            <p class="footer_text">Always ready for an oppertunity.</p>
+        </div>
+        <div id="links">  
+            <p class="footer_text">Like my Portfolio, say hi to me:</p>
+            <!-- <p><a href="npunj_be21@thapar.edu">Mail me</a></p> -->
+            <div id="linkimg">
+                <a href="mailto: npunj_be21@thapar.edu"><img src="../email.png" height="40px" width="40px"></a>
+                <a href="https://www.linkedin.com/in/naman-punj-78b453227/"><img src="../linkedin.png" height="40px" width="40px"></a>
+            </div>
+        </div>
+    </footer>
+    
+</body>
+</html>
