--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="background-two link-container">
-                <a class="link-two" href="">Skills</a>
+                <a class="link-two" href="Skills/index.html">Skills</a>
             </div>
             <div class="background-three link-container">
                 <a class="link-three" href="">Organisations</a>
