--- a/Projects/index.html
+++ b/Projects/index.html
@@ -79,7 +79,7 @@
         <div class="card">
             <div>
                 <div class="profile">
-                    <img src="./1_fr.png" class="card__image">
+                    <img src="vr1.png" class="card__image" style="height: 15vw;width: 15vw; margin: 1vw;">
                 </div>
                 <h class="profile_heading" style="margin-left: -3vw;">Edith-2.1<br>A simple voice assistant</h>
             </div>
@@ -118,7 +118,7 @@
     </div>
     <footer class="footer">
         <div id="me_">
-            <p class="footer_text">Always ready for an oppertunity.</p>
+            <p class="footer_text">Always ready for an opportunity.</p>
         </div>
         <div id="links">  
             <p class="footer_text">Like my Portfolio, say hi to me:</p>
