--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <footer class="footer">
             <div id="me_">
-                <p class="footer_text">Always ready for an oppertunity.</p>
+                <p class="footer_text">Always ready for an opportunity.</p>
             </div>
             <div id="links">  
                 <p class="footer_text">Like my Portfolio, say hi to me:</p>
